<resources>
    <string name="app_name">CVBuilder</string>
    <string name="profilepicture">Profile Picture</string>
    <string name="personaldetails">Personal Details</string>
    <string name="summary">Summary</string>">
    <string name="education">Education</string>">
    <string name="experience">Experience</string>">
    <string name="certifications">Certifications</string>">
    <string name="references">References</string>">
    <string name="mainactivitylogo">CV Builder</string>
    <string name="insertimage">Please enter an image by clicking on the image sign</string>
    <string name="email">email</string>
    <string name="phonenumber">phone number</string>
    <string name="entersummary">Enter Summary</string>
    <string name="name">Enter Your Name</string>
    <string name="university">Enter Your University</string>
    <string name="datesattendedfrom">Enter Dates Attended From</string>
    <string name="datesattendedto">Enter Dates Attended To</string>
    <string name="submit">submit</string>
    <string name="preview">Preview Your CV</string>
    <string name="organization">Enter Organization Name</string>
    <string name="entercertifications">Enter Certification Name</string>
    <string name="workexperience">Work Experience</string>
    <string name="hyphen">-</string>
    <string name="sharecv">Share CV</string>
</resources>