<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <!-- Title of the App -->
    <TextView
        android:id="@+id/cv_builder_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainactivitylogo"
        android:textSize="24sp"
        android:textColor="@android:color/holo_purple"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"/>

    <!-- Profile Picture Button -->
    <Button
        android:id="@+id/btn_profile_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profilepicture"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="20dp"
        />

    <!-- Personal Details Button -->
    <Button
        android:id="@+id/btn_personal_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personaldetails"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="20dp"/>

    <!-- Summary Button -->
    <Button
        android:id="@+id/btn_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="20dp"/>

    <!-- Education Button -->
    <Button
        android:id="@+id/btn_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/education"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="20dp"/>

    <!-- Experience Button -->
    <Button
        android:id="@+id/btn_experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/experience"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="20dp"/>

    <!-- Certifications Button -->
    <Button
        android:id="@+id/btn_certifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/certifications"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="20dp"/>

    <!-- References Button -->
    <Button
        android:id="@+id/btn_references"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preview"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="30dp"/>

</LinearLayout>
