<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExperienceActivity"
    android:orientation="vertical"
    android:padding="16dp">
    <EditText
        android:id="@+id/etOrganization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/organization"
        android:layout_marginBottom="16dp" />

    <!-- EditText for entering the dates attended -->
    <EditText
        android:id="@+id/etDatesAttendedFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/datesattendedfrom"
        android:layout_marginBottom="16dp"
        android:focusable="false"
        android:clickable="true" />
    <EditText
        android:id="@+id/etDatesAttendedTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/datesattendedto"
        android:layout_marginBottom="16dp"
        android:focusable="false"
        android:clickable="true" />

    <!-- Button to submit the experience data -->
    <Button
        android:id="@+id/btnSubmitExperience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center" />

</LinearLayout>